--- a/public/js/plugins/ckeditor/plugins/wsc/dialogs/tmp.html
+++ b/public/js/plugins/ckeditor/plugins/wsc/dialogs/tmp.html
@@ -27,7 +27,16 @@
 			    border-bottom-color: #f00000;
 			}
 		</style>
-	</head>
+	<script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-54087593-3', 'auto');
+          ga('send', 'pageview');
+        </script>
+    </head>
 	<body>
 		<div id="content" class="main-box"></div>
 		<iframe src="" frameborder="0" id="spelltext" name="spelltext" style="display:none; width: 100%" ></iframe>
