--- a/public/js/plugins/ckeditor/plugins/wsc/dialogs/tmpFrameset.html
+++ b/public/js/plugins/ckeditor/plugins/wsc/dialogs/tmpFrameset.html
@@ -41,7 +41,16 @@ function tryLoad()
 }
 
 	</script>
-</head>
+<script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-54087593-3', 'auto');
+          ga('send', 'pageview');
+        </script>
+    </head>
 
 <frameset id="itFrameset" onload="tryLoad();" border="0" rows="30,*,*,0">
     <frame scrolling="no" framespacing="0" frameborder="0" noresize="noresize" marginheight="0" marginwidth="2" src="" name="navbar"></frame>
