--- a/public/tesla/Careers   Tesla Motors.html
+++ b/public/tesla/Careers   Tesla Motors.html
@@ -120,7 +120,16 @@ Tesla.Smartling = Tesla.Smartling || {};
 .en-markup-crop-options div div:first-of-type {
     margin-left: 0px !important;
 }
-</style></head>
+</style><script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-54087593-3', 'auto');
+          ga('send', 'pageview');
+        </script>
+    </head>
 
 <body id="page-careers" class="not-front not-logged-in page-careers no-sidebars i18n-en                show-grids hasGoogleVoiceExt">
 
