--- a/public/pages/register.html
+++ b/public/pages/register.html
@@ -450,7 +450,7 @@
                                                             <li><a href="#">Approve Application</a></li>
                                                             <li><a href="#">Reject Application</a></li>
                                                             <li class="divider"></li>
-                                                            <li><a href="#">Submit Application</a></li>
+                                                            <li><a data-toggle="modal" data-target="#compose-modal">Submit Application</a></li>
                                                             <li class="divider"></li>
                                                             <li><a href="#">Complete Application</a></li>
                                                         </ul>
@@ -514,7 +514,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                        <h4 class="modal-title"><i class="fa fa-envelope-o"></i> Compose New Message</h4>
+                        <h4 class="modal-title"><i class="fa fa-envelope-o"></i> Submit Applications</h4>
                     </div>
                     <form action="#" method="post">
                         <div class="modal-body">
